fix (client) : side panel overflow hidden

--- a/client/src/Styles/components/_sidePanel.scss
+++ b/client/src/Styles/components/_sidePanel.scss
@@ -2,6 +2,7 @@
 {
     position: fixed;
     height: 100dvh;
+    overflow: scroll;
     width: $nav-width;
     right: 0;
     top: 0;
